# hazard-analyzer

./: Cargo.toml  README.md
crates/code-certifier/: Cargo.toml
crates/code-certifier/src/: error.rs  git.rs  lib.rs  manifest.rs
crates/hazard-analyzer/: Cargo.toml  README.md
crates/hazard-analyzer/src/: concurrent.rs  lib.rs  print.rs  re.rs
crates/hazard-analyzer/src/device/: file.rs  methods.rs  mod.rs  new.rs
crates/hazard-analyzer/src/firmware/: file.rs  mod.rs
crates/hazard-analyzer/tests/: tests.rs
crates/hazard-analyzer/tests/devices/: fridge.rs  light.rs  methods_device.rs  new_device.rs
crates/hazard-analyzer/tests/firmwares/: ascot_fridge.rs  ascot_light.rs  with_methods_device.rs  with_multiple_devices.rs  with_new_device.rs  with_not_allowed_hazards.rs  without_mandatory_actions.rs  without_mandatory_hazards.rs
crates/hazard-analyzer/tests/snapshots/devices/: actions_defined_with_methods.snap  actions_defined_with_new.snap  ascot_fridge.snap  ascot_light.snap  multiple_devices.snap
crates/hazard-analyzer/tests/snapshots/firmwares/: ascot_fridge.snap  ascot_light.snap  with_methods_device.snap  with_multiple_devices.snap  with_new_device.snap  with_not_allowed_hazards.snap  without_mandatory_actions.snap  without_mandatory_hazards.snap
crates/pub-api/: Cargo.toml  README.md
crates/pub-api/src/: api.rs  ds.rs  functions.rs  lib.rs  macros.rs  traits.rs
crates/pub-api/tests/projects/aliases/src/: lib.rs
crates/pub-api/tests/projects/derive_traits/src/: lib.rs
crates/pub-api/tests/projects/enums/src/: lib.rs
crates/pub-api/tests/projects/functions/src/: lib.rs
crates/pub-api/tests/projects/impl_traits/: Cargo.toml
crates/pub-api/tests/projects/impl_traits/src/: lib.rs
crates/pub-api/tests/snapshots/: aliases.snap  derive_traits.snap  enums.snap  functions.snap  impl_traits.snap  macros.snap  structs.snap  traits.snap
(+9 files in other folders)
