[package]
name = "hazard-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-code-analysis = { git = "https://github.com/alexle0nte/rust-code-analysis.git", branch = "hazard-analyzer" }
code-certifier ={ path = "../code-certifier", version = "=0.1.0" }
crossbeam = "^0.8.4"
rayon = "^1.10.0"
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde = { version = "^1.0", features = ["derive"] }
regex = "^1.10.4"
regex_static = "0.1.1"
git2 = "^0.18.3"
toml = "^0.8.14"
termcolor = "^1.4.1"

[dev-dependencies]
insta = { version = "^1.39.0", features = ["yaml", "redactions"] }
