[package]
name = "pub-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustdoc-json = "^0.9.1"
rustdoc-types = "^0.26.0"
serde_json = { version = "^1.0", features = ["preserve_order"] }
serde = { version = "^1.0", features = ["derive"] }
toml = "^0.8.14"
code-certifier ={ path = "../code-certifier", version = "=0.1.0" }

[dev-dependencies]
insta = { version = "^1.39.0", features = ["yaml", "redactions"] }